--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "reactflow": "^11.11.4",
+    "recharts": "^3.0.2",
     "tailwind-merge": "^3.3.0"
   },
   "devDependencies": {
