--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "clsx": "^2.1.1",
     "html2canvas": "^1.4.1",
     "lucide-react": "^0.511.0",
-    "next": "latest",
+    "next": "^16.0.7",
     "next-cloudinary": "^6.16.0",
     "next-themes": "^0.4.6",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "reactflow": "^11.11.4",
     "recharts": "^3.1.0",
     "tailwind-merge": "^3.3.0"
